Refactoring Smithy errors
